# fetchtastic

./: .bandit  .coderabbit.yml  .coveragerc  .gitignore  .gitleaks.toml  AGENTS.md  BRANCH_INFO.md  LICENSE  PUBLISHING.md  README.md  codecov.yml  coverage.xml  fetchtastic.py  menu.py  menu_apk.py  menu_firmware.py  meshtastic_downloader.py  pr_summary_temp.md  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh  test_comprehensive_fixes.py  test_config_parity.py  test_extraction_validation.py  test_fetchtastic_logic.py  test_firmware_skip_logic.py  test_github_releases.py  test_prerelease_file_verification.py  test_prerelease_functionality.py  test_repository_integration.py  uninstall.sh
.github/workflows/: pypi-publish.yml  python-publish.yml  python-test.yml  test-and-coverage.yml
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: .bandit
app/: cli.py  downloader.py  menu_apk.py  menu_firmware.py  menu_repo.py  repo_downloader.py  setup_config.py
docs/: TESTING_GUIDE.md  configuration.md  delegate_cleanup_tasks.md  dfu-build-progress.md  linux-installation.md  macos-installation.md  migration-progress-summary.md  mtand-build-progress.md  refactor-handoff.md  refactor-implementation-plan.md  refactor-parity-audit.md  refactor-remaining-work.md  refactor-status.md  refactoring-plan-downloader.md  termux-installation.md  test-migration-plan.md  usage-guide.md  version-refactoring-summary.md  windows-installation.md
docs/installation/: linux-mac.md  termux.md  windows.md
docs/usage/: commands.md  setup.md
scripts/: migrate_legacy_downloader.py
src/fetchtastic/: cli.py  client_app_config.py  client_release_discovery.py  constants.py  device_hardware.py  downloader.py  env_utils.py  exceptions.py  log_utils.py  menu_apk.py  menu_app.py  menu_desktop.py  menu_firmware.py  menu_repo.py  notifications.py  repo_downloader.py  setup_config.py  ui_utils.py  utils.py
src/fetchtastic/assets/: __init__.py  android.py  base.py  bootloaders.py  dfu_apps.py  firmware.py
src/fetchtastic/download/: __init__.py  android.py  async_client.py  async_core.py  async_downloader.py  base.py  cache.py  cli_integration.py  client_app.py  config_utils.py  desktop.py  files.py  firmware.py  github_source.py  interfaces.py  latest_pointer.py  migration.py  orchestrator.py  prerelease_history.py  release_history.py  repository.py  version.py
src/fetchtastic/downloaders/: __init__.py  core.py
src/fetchtastic/tools/: __init__.py  fetchtastic-setup.bat  fetchtastic-setup.sh  install_linux.sh  install_mac.sh  setup_fetchtastic.ps1  setup_fetchtastic.sh
test_env/: pyvenv.cfg
tests/: __init__.py  async_test_utils.py  conftest.py  legacy_compat.py  test_allow_env_token.py  test_android_downloader_comprehensive.py  test_api_tracking.py  test_async_client.py  test_async_core.py  test_async_downloader.py  test_automation_config.py  test_base_downloader.py  test_build_dfu_module.py  test_build_environment.py  test_build_interactive.py  test_build_mtand_module.py  test_build_repo_helpers.py  test_cache_flow_integration.py  test_cache_management.py  test_cache_manager_releases_optimization.py  test_cache_repo_directories.py  test_channel_suffixes.py  test_cli.py  test_cli_additional.py  test_cli_extended.py  test_cli_focused.py  test_cli_notifications.py  test_cli_simple.py  test_client_app_config.py  test_client_app_coverage.py  test_client_app_downloader.py  test_client_release_discovery.py  test_config_coverage_fixes.py  test_config_edge_cases.py  test_config_simple.py  test_config_utils.py  test_config_utils_comprehensive.py  test_constants.py  test_constants_module.py  test_coverage_fix.py  (+66 more)
tests/unit/: test_downloader.py  test_setup_config.py
~/.config/fetchtastic/: fetchtastic.yaml
