[metadata]
name = fetchtastic
version = 0.3.1
author = Jeremiah K
author_email = jeremiahk@gmx.com
description = Meshtastic Firmware and APK Downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeremiah-k/fetchtastic
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Android
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    pick
    PyYAML
    urllib3
    platformdirs

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fetchtastic = fetchtastic.cli:main
