[metadata]
name = fetchtastic
version = 0.7.3
author = Jeremiah K
author_email = jeremiahk@gmx.com
description = Meshtastic Firmware and APK Downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeremiah-k/fetchtastic
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: Android
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    pick
    PyYAML
    urllib3
    packaging
    platformdirs
    rich
python_requires = >=3.8

[options.extras_require]
win =
    pywin32
    winshell
test =
    pytest
    pytest-mock
    pytest-cov

[options.packages.find]
where = src

[options.package_data]
fetchtastic.tools = *.bat, *.sh

[options.entry_points]
console_scripts =
    fetchtastic = fetchtastic.cli:main
